# COS214-Project-Repo

./: .gitignore  API.h  AllTest.cpp  AverageCustomer.cpp  AverageCustomer.h  BUILD_CI_TESTING_README.md  CMakeLists.txt  ContinueGameOption.h  Customer.cpp  Customer.h  CustomerCreator.cpp  CustomerCreator.h  CustomerVisitor.h  DecorativeArrangement.cpp  DecorativeArrangement.h  DecorativePot.h  DecorativeWrapping.cpp  DecorativeWrapping.h  Doxyfile  FertilizerStaff.cpp  FertilizerStaff.h  Game.h  GreenFingerCustomer.cpp  GreenFingerCustomer.h  GreenFingerCustomerCreator.h  GreenhouseStaff.h  IgnorantCustomer.cpp  IgnorantCustomer.h  IgnorantCustomerCreator.cpp  IgnorantCustomerCreator.h  Inventory.cpp  MenuOption.h  NewGameOption.h  NotSellable.cpp  NotSellable.h  Plant.cpp  Plant.h  PlantCreator.cpp  PlantCreator.h  PlantDecorator.cpp  (+28 more)
.github/workflows/: auto_pr.yml  c-cpp.yml  doxy.yml  valgrind_test.yaml
backend/: dev.sh  main.cpp  server.js
backend/API/: API.cpp  API.h  APIComponent.h  APIController.cpp  APIController.h  APIDto.h
backend/WS/: GreenSock.cpp  GreenSock.h  WS.cpp  WS.h
backend/customer/: AverageCustomer.cpp  AverageCustomer.h  AverageCustomerBuilder.cpp  AverageCustomerBuilder.h  AverageCustomerCreator.cpp  AverageCustomerCreator.h  Customer.cpp  Customer.h  CustomerBuilder.cpp  CustomerBuilder.h  CustomerCreator.cpp  CustomerCreator.h  CustomerVisitor.cpp  CustomerVisitor.h  Director.cpp  Director.h  GreenFingerCustomer.cpp  GreenFingerCustomer.h  GreenFingerCustomerBuilder.cpp  GreenFingerCustomerBuilder.h  GreenFingerCustomerCreator.cpp  GreenFingerCustomerCreator.h  IgnorantCustomer.cpp  IgnorantCustomer.h  IgnorantCustomerBuilder.cpp  IgnorantCustomerBuilder.h  IgnorantCustomerCreator.cpp  IgnorantCustomerCreator.h  VisitAverageSpendCustomer.cpp  VisitAverageSpendCustomer.h  VisitBigSpendCustomer.cpp  VisitBigSpendCustomer.h  VisitEasyCustomer.cpp  VisitEasyCustomer.h  VisitHighCustomer.cpp  VisitHighCustomer.h  VisitLowSpendCustomer.cpp  VisitLowSpendCustomer.h  VisitMediumCustomer.cpp  VisitMediumCustomer.h
backend/game/: BasicLogger.cpp  BasicLogger.h  CoutAndLog.cpp  CoutAndLog.h  EnvironmentInitializer.cpp  EnvironmentInitializer.h  ExitGameOption.cpp  ExitGameOption.h  Game.cpp  Game.h  GameConfiguration.h  JSONGameConfiguration.cpp  JSONGameConfiguration.h  Ledger.cpp  Ledger.h  LogDecorator.cpp  LogDecorator.h  Logger.cpp  Logger.h  MenuOption.cpp  MenuOption.h  NewGameOption.cpp  NewGameOption.h  PlantDied.cpp  PlantDied.h  PlayerMenu.cpp  PlayerMenu.h  Refund.cpp  Refund.h  Restock.cpp  Restock.h  Return.cpp  Return.h  Sale.cpp  Sale.h  SaleLoss.cpp  SaleLoss.h  SetEnv.h  ThreadSafeQueue.h  Transaction.cpp  (+8 more)
backend/greenhouse/: FertilizerStaff.cpp  FertilizerStaff.h  Greenhouse.cpp  Greenhouse.h  GreenhouseStaff.cpp  GreenhouseStaff.h  Inventory.cpp  Inventory.h  Manager.cpp  Manager.h  PruningStaff.cpp  PruningStaff.h  Restock.cpp  Restock.h  SalesFloor.cpp  SalesFloor.h  WaterStaff.cpp  WaterStaff.h
backend/plant/: DecorativeArrangement.cpp  DecorativeArrangement.h  DecorativePot.cpp  DecorativePot.h  DecorativeWrapping.cpp  DecorativeWrapping.h  Flower.cpp  Flower.h  FlowerCreator.cpp  FlowerCreator.h  NotSellable.cpp  NotSellable.h  Plant.cpp  Plant.h  PlantCreator.cpp  PlantCreator.h  PlantDecorator.cpp  PlantDecorator.h  PlantDied.h  PlantHealth.cpp  PlantHealth.h  PlantState.h  Sellable.cpp  Sellable.h  Succulent.cpp  Succulent.h  SucculentCreator.cpp  SucculentCreator.h  Tree.cpp  Tree.h  TreeCreator.cpp  (+1 more)
config/: .env  CMakeLists.txt  Dockerfile  GameConfig.json  c_cpp_properties.json
config/API/: CMakeLists.txt  Dockerfile  GameConfig.json
config/frontend/: Dockerfile  default.conf
docs/: APIComponent_8h.html  APIComponent_8h__dep__incl.map  APIComponent_8h__dep__incl.md5  APIComponent_8h__incl.map  APIComponent_8h__incl.md5  APIComponent_8h_source.html  APIController_8cpp.html  APIController_8cpp__incl.map  APIController_8cpp__incl.md5  APIController_8h.html  APIController_8h__dep__incl.map  APIController_8h__dep__incl.md5  APIController_8h__incl.map  APIController_8h__incl.md5  APIController_8h_source.html  APIDto_8h.html  APIDto_8h__dep__incl.map  APIDto_8h__dep__incl.md5  APIDto_8h__incl.map  APIDto_8h__incl.md5  APIDto_8h_source.html  API_8h.html  API_8h__dep__incl.map  API_8h__dep__incl.md5  API_8h__incl.map  API_8h__incl.md5  API_8h_source.html  AverageCustomerBuilder_8cpp.html  AverageCustomerBuilder_8cpp__incl.map  AverageCustomerBuilder_8cpp__incl.md5  AverageCustomerBuilder_8h.html  AverageCustomerBuilder_8h__dep__incl.map  AverageCustomerBuilder_8h__dep__incl.md5  AverageCustomerBuilder_8h__incl.map  AverageCustomerBuilder_8h__incl.md5  AverageCustomerBuilder_8h_source.html  AverageCustomer_8cpp.html  AverageCustomer_8cpp__incl.map  AverageCustomer_8cpp__incl.md5  AverageCustomer_8h.html  (+852 more)
frontend/: index.html
latex/: APIComponent_8h.tex  APIComponent_8h__dep__incl.md5  APIComponent_8h__incl.md5  APIController_8cpp.tex  APIController_8cpp__incl.md5  APIController_8h.tex  APIController_8h__dep__incl.md5  APIController_8h__incl.md5  APIDto_8h.tex  APIDto_8h__dep__incl.md5  APIDto_8h__incl.md5  API_8h.tex  API_8h__dep__incl.md5  API_8h__incl.md5  AverageCustomerBuilder_8cpp.tex  AverageCustomerBuilder_8cpp__incl.md5  AverageCustomerBuilder_8h.tex  AverageCustomerBuilder_8h__dep__incl.md5  AverageCustomerBuilder_8h__incl.md5  AverageCustomer_8cpp.tex  AverageCustomer_8cpp__incl.md5  AverageCustomer_8h.tex  AverageCustomer_8h__dep__incl.md5  AverageCustomer_8h__incl.md5  BasicLogger_8h.tex  BasicLogger_8h__dep__incl.md5  BasicLogger_8h__incl.md5  ContinueGameOption_8h.tex  ContinueGameOption_8h__dep__incl.md5  ContinueGameOption_8h__incl.md5  CustomerBuilder_8cpp.tex  CustomerBuilder_8cpp__incl.md5  CustomerBuilder_8h.tex  CustomerBuilder_8h__dep__incl.md5  CustomerBuilder_8h__incl.md5  CustomerVisitor_8cpp.tex  CustomerVisitor_8cpp__incl.md5  Customer_8cpp.tex  Customer_8cpp__incl.md5  Customer_8h.tex  (+281 more)
tests/: unitTests.cpp
utils/: dev-env-setup.sh  dotenv.sh  mock-ws.py  oatpp-install.sh  test.py
(+132 files in other folders)
